--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://rishabh176.github.io/weather-app/",
   "dependencies": {
+    "axios": "^1.3.4",
     "gh-pages": "^2.2.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
